data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_806.wast
;; 7. **Forward Branch Operand Restoration Test:**    Set up a block with specific operand types and a `br` instruction that unconditionally branches forward, resuming execution after an `end` instruction. This verifies if the engine correctly restores operands on the stack after unwinding.

(assert_invalid
  (module
    (func $forward-branch-operand-restoration
      (block (result i32)
        (i32.const 42)
        (i32.const 10)
        (br 0)
      )
      (i32.add)
    )
  )
  "type mismatch"
)